"Collection API Улучшения" [#70623]